force-app/main/default/objects/Activity/fields/Postvisitmeeting__c.field-meta.xml
<CustomField>
    <fullName>Postvisitmeeting__c</fullName>
    <label>訪問後打ち合わせ</label>
    <type>TextArea</type>
</CustomField>