force-app/main/default/objects/Activity/fields/Pre_Q__c.field-meta.xml
<CustomField>
    <fullName>Pre_Q__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Q提案</label>
    <type>Checkbox</type>
</CustomField>