force-app/main/default/objects/Activity/fields/ProposalContentResponse__c.field-meta.xml
<CustomField>
    <fullName>ProposalContentResponse__c</fullName>
    <label>提案内容・対応策</label>
    <type>TextArea</type>
</CustomField>