force-app/main/default/objects/Activity/fields/region__c.field-meta.xml
<CustomField>
    <fullName>region__c</fullName>
    <inlineHelpText>https://nohara.sharepoint.com/:i:/s/msteams_085fa0/ESfTEH2sDgpKr2k4D4nkCjQBN-52L-i2Ny2eue6QoMD9fw?e=BBKbq5</inlineHelpText>
    <label>地域</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>北海道</fullName>
            </value>
            <value>
                <fullName>東北</fullName>
            </value>
            <value>
                <fullName>関東</fullName>
            </value>
            <value>
                <fullName>東海</fullName>
            </value>
            <value>
                <fullName>近畿</fullName>
            </value>
            <value>
                <fullName>中国</fullName>
            </value>
            <value>
                <fullName>四国</fullName>
            </value>
            <value>
                <fullName>九州・沖縄</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>