force-app/main/default/objects/Activity/fields/RelatedAccount__c.field-meta.xml
<CustomField>
    <fullName>RelatedAccount__c</fullName>
    <label>関連取引先名</label>
    <length>225</length>
    <type>Text</type>
</CustomField>