force-app/main/default/objects/Activity/fields/RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunity__c</fullName>
    <label>関連商談名</label>
    <length>225</length>
    <type>Text</type>
</CustomField>