force-app/main/default/objects/Activity/fields/RelatedOpportunityStage__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunityStage__c</fullName>
    <label>関連商談フェーズ</label>
    <length>20</length>
    <type>Text</type>
</CustomField>