force-app/main/default/objects/Activity/fields/ST_BrowsingHistory__c.field-meta.xml
<CustomField>
    <fullName>ST_BrowsingHistory__c</fullName>
    <label>閲覧履歴ST</label>
    <length>255</length>
    <type>Text</type>
</CustomField>