force-app/main/default/objects/Activity/fields/ST_category__c.field-meta.xml
<CustomField>
    <fullName>ST_category__c</fullName>
    <label>種別_ST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>アポイント</fullName>
            </value>
            <value>
                <fullName>見積提出</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>