force-app/main/default/objects/Activity/fields/ST_syokan__c.field-meta.xml
<CustomField>
    <fullName>ST_syokan__c</fullName>
    <label>所感</label>
    <type>TextArea</type>
</CustomField>