force-app/main/default/objects/Activity/fields/ST_Viewed__c.field-meta.xml
<CustomField>
    <fullName>ST_Viewed__c</fullName>
    <label>閲覧済みST</label>
    <type>TextArea</type>
</CustomField>