force-app/main/default/objects/Activity/fields/ST_youshi__c.field-meta.xml
<CustomField>
    <fullName>ST_youshi__c</fullName>
    <label>要旨</label>
    <type>TextArea</type>
</CustomField>