force-app/main/default/objects/Activity/fields/SubjectShow__c.field-meta.xml
<CustomField>
    <fullName>SubjectShow__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Id, Subject , &apos;_blank&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>件名(表示用)</label>
    <type>Text</type>
</CustomField>