force-app/main/default/objects/Activity/fields/SummaryReport__c.field-meta.xml
<CustomField>
    <fullName>SummaryReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>日報・週報</label>
    <referenceTo>SummaryReport__c</referenceTo>
    <relationshipLabel>活動</relationshipLabel>
    <relationshipName>SummaryReportB</relationshipName>
    <type>Lookup</type>
</CustomField>