force-app/main/default/objects/Activity/fields/tantoubusyo__c.field-meta.xml
<CustomField>
    <fullName>tantoubusyo__c</fullName>
    <formula>Owner:User.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>担当部署</label>
    <type>Text</type>
</CustomField>