force-app/main/default/objects/Activity/fields/TargetCategory__c.field-meta.xml
<CustomField>
    <fullName>TargetCategory__c</fullName>
    <formula>TEXT(Ju_kat210922__r.EN_TargetCategory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>26年6月期個社方針検討用</label>
    <type>Text</type>
</CustomField>