force-app/main/default/objects/Activity/fields/targetClient__c.field-meta.xml
<CustomField>
    <fullName>targetClient__c</fullName>
    <label>訪問先</label>
    <type>TextArea</type>
</CustomField>