force-app/main/default/objects/Activity/fields/TaskProgress__c.field-meta.xml
<CustomField>
    <fullName>TaskProgress__c</fullName>
    <label>タスク進捗</label>
    <type>TextArea</type>
</CustomField>