force-app/main/default/objects/Activity/fields/TG_JU__c.field-meta.xml
<CustomField>
    <fullName>TG_JU__c</fullName>
    <formula>TEXT( Ju_kat210922__r.JU_TG__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TG_JU</label>
    <type>Text</type>
</CustomField>