force-app/main/default/objects/Activity/fields/ToDo__c.field-meta.xml
<CustomField>
    <fullName>ToDo__c</fullName>
    <label>行動手段（ToDo）</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>面談</fullName>
            </value>
            <value>
                <fullName>宿題</fullName>
            </value>
            <value>
                <fullName>メール</fullName>
                <isActive>false</isActive>
                <label>メール</label>
            </value>
            <value>
                <fullName>電話</fullName>
                <isActive>false</isActive>
                <label>電話</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>