force-app/main/default/objects/Activity/fields/tuchisakimail__c.field-meta.xml
<CustomField>
    <fullName>tuchisakimail__c</fullName>
    <label>通知先メール</label>
    <type>Email</type>
</CustomField>