force-app/main/default/objects/Activity/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>参考データ</label>
    <type>Url</type>
</CustomField>