force-app/main/default/objects/Activity/fields/WhatLink__c.field-meta.xml
<CustomField>
    <fullName>WhatLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;&amp; WhatId,  WhatName__c , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>関連先（リンク）</label>
    <type>Text</type>
</CustomField>