force-app/main/default/objects/Activity/fields/WhatName__c.field-meta.xml
<CustomField>
    <fullName>WhatName__c</fullName>
    <label>関連先（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>